--- a/SDP/src/componets/Header.scss
+++ b/SDP/src/componets/Header.scss
@@ -5,7 +5,7 @@ $text-color: #f5f5f5;
 $fog: #3b3b3b3d;
 
 .Header {
-  width: 110%;
+  width: 100vw;
   height: 130px;
   display: flex;
   border-bottom: 2px solid $text-color;
