--- a/SDP/src/assets/CodeForm.scss
+++ b/SDP/src/assets/CodeForm.scss
@@ -11,11 +11,14 @@ $fog: #3b3b3b3d;
   grid-template-areas: "left right";
   grid-template-columns: 2fr 1fr;
   width: 100%;
-  height: 80vh;
+  height: calc(100%);
   column-gap: 5px;
   grid-auto-columns: 50%;
   padding: 0px;
   margin: 0px;
+  margin-top: auto;
+  margin-bottom: auto;
+  overflow: hidden;
 }
 
 @keyframes waviy {
@@ -53,6 +56,10 @@ $fog: #3b3b3b3d;
   color: #495057;
   display: inline-block;
   border-radius: 5px;
+  white-space: pre-wrap;
+}
+.Hal {
+  white-space: pre-wrap;
 }
 .line {
   text-align: left;
@@ -124,11 +131,12 @@ $fog: #3b3b3b3d;
   border-radius: 5px;
   text-align: center;
   width: 80%;
-  height: 80%;
+  height: 65vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: auto;
+  padding-bottom: 0px;
 }
 
 .codeForm {
@@ -146,7 +154,6 @@ $fog: #3b3b3b3d;
   align-items: center;
   position: relative;
   padding: 20px;
-  width: 100%;
   height: 100%;
 }
 
@@ -167,8 +174,7 @@ $fog: #3b3b3b3d;
   margin: auto;
   margin-bottom: 10px;
   width: 80%;
-  padding: 5px;
-  padding-left: 20px;
+  padding: 10px;
   text-align: left;
 }
 .ResultTitle {
@@ -179,7 +185,6 @@ $fog: #3b3b3b3d;
   width: 80%;
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
 }
 .FormLabel {
   @extend .sharedTitleStyle;
